Fix spacing between save button and other button groups

--- a/src/components/Filters/components/ConnectedFilterControl/ConnectedFilterControl.scss
+++ b/src/components/Filters/components/ConnectedFilterControl/ConnectedFilterControl.scss
@@ -58,7 +58,7 @@ $stacking-order: (
 
 .newDesignLanguage {
   .CenterContainer {
-    margin-right: spacing(extra-tight);
+    margin-right: spacing(tight);
   }
 }
 
